# cereal_catkin

./: CMakeLists.txt  package.xml
include/cereal_catkin/: CerealCatkin.h
src/: CerealCatkin.cpp
